# pocmap

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mcp_config.json  mcp_server.py  mcp_transport_sse.py  mcp_transport_stdio.py  pyproject.toml
.agents/skills/claude-code-project/: SKILL.md
.agents/skills/claude-code-project/assets/: agents-md-template.md  claude-md-template.md
.agents/skills/claude-code-project/references/: check-improvements-guide.md  claude-directory-structure.md  update-project-checklist.md  verify-project-checklist.md
.agents/skills/goal-creator/: SKILL.md
.agents/skills/goal-creator/references/: categories.md  patterns.md  templates.md  workflow-guides.md
.agents/skills/python-background-jobs/: SKILL.md
.agents/skills/python-background-jobs/references/: details.md
.agents/skills/python-design-patterns/: SKILL.md
.agents/skills/python-design-patterns/references/: details.md
.agents/skills/python-error-handling/: SKILL.md
.agents/skills/python-error-handling/references/: details.md
.agents/skills/python-performance-optimization/: SKILL.md
.agents/skills/python-performance-optimization/references/: details.md
.claude/: settings.json
.claude/agents/: agent-docs-consistency.md  security-reviewer.md
.claude/goals/: production-ready.md
.claude/hooks/: guard_secrets.py  lint_edited_py.py
.claude/plans/: product-roadmap.md
.claude/skills/add-mcp-tool/: SKILL.md
.claude/skills/pocmap-agent/: SKILL.md
.claude/skills/pocmap-agent/references/: cli_commands.md  mcp_tools.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  ci-github-actions.yml  daily-brief.sh  lookup-json.sh  mcp-config.json
examples/example-exploit-source/: README.md  pyproject.toml
examples/example-exploit-source/pocmap_example_source/: __init__.py
src/pocmap/: __init__.py  __main__.py  cli.py  config.py  models.py
src/pocmap/bugbounty/: __init__.py  automation.py  checklists.py  methodology.py  prioritization.py  scope_manager.py  templates.py
src/pocmap/bugbounty/playbooks/: __init__.py  bb-submission-playbook.json  cve-assessment-playbook.json  (+1 more)
src/pocmap/clients/: __init__.py  cveorg_client.py  exploit_client.py  github_client.py  nvd_client.py
src/pocmap/data/: __init__.py  product_aliases.py
src/pocmap/services/: __init__.py  bb_service.py  cve_service.py  exploit_service.py  lab_service.py  product_service.py  recent_service.py  report_service.py  snapshot.py
src/pocmap/templates/: __init__.py  report.html
src/pocmap/utils/: __init__.py  cache.py  compat.py  exit_codes.py  formatters.py  http.py  output.py  paths.py  registry.py  validators.py
tests/: test_cache.py  test_cli_features.py  test_cli_formats.py  test_cli_polish.py  test_doctor.py  test_e2e.py  test_edge_cases.py  test_epss_scale.py  test_fetch_status.py  test_ghpoc.py  test_new_features_edge.py  test_notify.py  test_offline.py  test_offline_e2e.py  test_output.py  test_plugins.py  test_renderers.py  test_report_html.py  test_snapshot.py  test_ssrf.py
(+5 files in other folders)
